# WaterDropEngine_Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat
app/: CoreApp.cpp  CoreApp.hpp  CoreAppRenderer.cpp  CoreAppRenderer.hpp  CoreAppSubrenderer.cpp  CoreAppSubrenderer.hpp  EngineInstance.hpp  main.cpp
app/ComputeAppTest/: ComputeAppRenderer.hpp
app/ComputeAppTest/modules/: WaterModule.cpp  WaterModule.hpp
app/WaterApp/: WaterAppRenderer.hpp  WaterAppScene.hpp
app/WaterApp/materials/: DepthMaterial.hpp  NormalMaterial.hpp  WaterMaterial.hpp
app/WaterApp/meshes/: Plane.hpp
app/examples/: EngineExampleInstance.hpp  ExamplesApp.cpp  ExamplesApp.hpp  README.md
app/examples/01-Triangle/: EngineInstanceExample01.hpp  PipelineExample01.hpp  SceneExample01.hpp
app/examples/01_DrawSimpleTriangle/: DrawSimpleTriangleRenderer.hpp  DrawSimpleTriangleSubrenderer.hpp
app/examples/02-3D_Cube/: EngineInstanceExample02.hpp  PipelineExample02.cpp  PipelineExample02.hpp  SceneExample02.hpp
app/examples/02_DrawCube/: DrawCubeRenderer.hpp  DrawCubeScene.hpp
app/examples/03-Draw_Indirect/: EngineInstanceExample03.hpp  PipelineExample03.hpp  SceneExample03.hpp
app/examples/03_LoadShapes/: LoadShapesRenderer.hpp  LoadShapesScene.hpp
app/examples/04-Indirect_Culling/: CullingInstance.cpp  CullingInstance.hpp  EngineInstanceExample04.hpp  PipelineExample04.cpp  PipelineExample04.hpp  SceneExample04.hpp
app/examples/04_DrawGUI/: DrawGUIRenderer.hpp  DrawGUIScene.hpp
app/examples/05-Terrain/: EngineInstanceExample05.hpp  PipelineExample05.hpp  SceneExample05.hpp  ShadowMaterial.hpp
app/examples/05_ComputeShader/: ComputeShaderRenderer.hpp  ComputeShaderSubrenderer.hpp
app/examples/06_PostProcessing/: PostProcessingRenderer.hpp  PostProcessingScene.hpp
app/projects/: ProjectsApp.cpp  ProjectsApp.hpp
app/projects/ComputeAppTest/: ComputeAppScene.hpp
app/projects/WaterApp/: WaterAppScene.hpp
app/rayTracer/: RayEngineInstance.hpp  RayPipeline.cpp  RayPipeline.hpp
app/rayTracer/gui/: CImage.cpp  CImage.hpp
app/rayTracer/materials/: DieletricMaterial.hpp  LambertianMaterial.hpp  Material.hpp  MetalMaterial.hpp
app/rayTracer/objects/: Hittable.hpp  HittableList.hpp  Sphere.cpp  Sphere.hpp
app/rayTracer/rays/: Ray.hpp  RayTracer.cpp  RayTracer.hpp
app/rayTracer/tracer/: Ray.hpp
app/rayTracer/utils/: HitConstants.hpp  Vector.hpp
app/render/: CoreAppRenderer.cpp  CoreAppRenderer.hpp  CoreAppSubrenderer.cpp  CoreAppSubrenderer.hpp  EngineRenderPipeline.hpp
app/renderEngine/: CoreAppPipeline.cpp  CoreAppPipeline.hpp  CoreAppRenderer.cpp  CoreAppRenderer.hpp
app/scene/: CoreAppScene.cpp  CoreAppScene.hpp
imgs/Engine Structure/: engineStructure.ai  renderStructure.ai
res/demo_scene/: scene.json
res/demo_scene/chunk/: chunk_0-0.json
res/demo_scene/gameObjects/: go_0.json  go_1.json  go_2.json  go_3.json  go_4.json
res/manager/: compile-shaders.bat  compile.bat  copy-res-folder.bat
res/manager/NVIDIA-Nsight-Graphics-Debugger/: WaterDropEngine.ngfx-proj
res/scene/: demo_scene.json
res/shaders/: colorShader.frag  colorShader.frag.spv  colorShader.vert  colorShader.vert.spv  compile.bat  gizmoShader.frag  gizmoShader.vert  gizmoShader.vert.spv  simpleShader.frag  simpleShader.frag.spv  simpleShader.vert  simpleShader.vert.spv
res/shaders/WaterApp/: depthComputeShader.frag  depthComputeShader.frag.spv  depthComputeShader.vert  depthComputeShader.vert.spv  normalShader.vert  normalShader.vert.spv  waterShader.frag  waterShader.frag.spv  waterShader.vert  waterShader.vert.spv
res/shaders/color/: colorShader.frag  colorShader.vert  colorShader.vert.spv
res/shaders/compute/: testcompute.comp  testcompute.comp.spv
res/shaders/depth/: depthShader.vert
res/shaders/filters/: defaultFilter.frag  defaultFilter.frag.spv  defaultFilter.vert  depthViewerFilter.frag  depthViewerFilter.frag.spv  invertFilter.frag  invertFilter.frag.spv
res/shaders/normal/: normalShader.frag  normalShader.frag.spv  normalShader.vert
res/shaders/simpleFilter/: simpleFilter.frag  simpleFilter.frag.spv  simpleFilter.vert  simpleFilter.vert.spv
res/shaders/texture/: imageDisplayer.frag  imageDisplayer.frag.spv  textureShader.frag  textureShader.frag.spv  textureShader.vert  textureShader.vert.spv
saves/: minecraft_scene.json  scene_coreappscene.json
shaders/: compile.bat  simpleShader.frag  simpleShader.vert
src/: Constants.cpp  FirstApp.cpp  FirstApp.hpp  main.cpp  wde.hpp
src/WaterDropEngine/: WaterDropEngine.cpp  WaterDropEngine.hpp  includes.hpp
src/WaterDropEngine/WdeCore/: WdeInstance.cpp  WdeInstance.hpp  WdeModule.hpp
src/WaterDropEngine/WdeGUI/: GUIBar.cpp  GUIBar.hpp  GUILogger.hpp  GUIRenderer.hpp  GUISubrenderer.cpp  GUISubrenderer.hpp  GUITheme.hpp  WdeGUI.cpp  WdeGUI.hpp
src/WaterDropEngine/WdeInput/: InputController.cpp  InputController.hpp  InputManager.cpp  InputManager.hpp
src/WaterDropEngine/WdeInputEngine/: InputController.cpp  InputController.hpp  InputManager.cpp  InputManager.hpp  InputMovementController.cpp  InputMovementController.hpp
src/core/: CoreApp.cpp  CoreApp.hpp  WdeInstanceDevice.cpp  WdeInstanceDevice.hpp  WdeSwapChain.cpp  WdeSwapChain.hpp  WdeWindow.cpp  WdeWindow.hpp
src/engine/: WdeDevice.cpp  WdeDevice.hpp  WdeInstanceDevice.cpp  WdeInstanceDevice.hpp  WdePipeline.cpp  WdePipeline.hpp  WdeWindow.cpp  WdeWindow.hpp
src/rendering/: WdeDefaultGraphicPipeline.cpp  WdeDefaultGraphicPipeline.hpp  WdeDefaultGraphicsPipeline.cpp  WdeDefaultGraphicsPipeline.hpp  WdePipeline.hpp  WdeRenderer.cpp  WdeRenderer.hpp  WdeSwapChain.cpp  WdeSwapChain.hpp
src/utils/: Constants.hpp  Utils.cpp  Utils.hpp
(+421 files in other folders)
